refactor: domain 구조 변경
 Board : Map<Position, Piece>를 가지도록 변경
 Path : List<Position>을 반환하도록 변경
 Team enum 추가 -> Piece : 필드 Team 추가
 하나의 Board에서 모든 기물을 가지도록 변경 -> Boards 제거
 두 개의 Board를 가짐으로 생기던 메소드 제거
 MoveInfo 패키지 분리

todo: Board.pawnMove()를 Pawn의 책임으로 변경